# metamorph

./: pyproject.toml  stable_diffusion_walk.py
