[tool.poetry]
name = "metamorph"
version = "0.1.0"
description = ""
authors = ["Oscar Laird <olaird25@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
diffusers = "^0.26.3"
accelerate = "^0.27.2"
transformers = "^4.38.2"
ipykernel = "^6.29.3"
ipywidgets = "^8.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
